# FlaskApiSetup

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  auth.py  extensions.py
app/api/: admin.py  authentication.py
app/config/: config.py  config.yaml  decorators.py
app/models/: models.py
instance/: app.db
